--- a/02_HTMLとCSSを極める（トランジション編）/010_ホバーで色が変わるボタン/start/index.html
+++ b/02_HTMLとCSSを極める（トランジション編）/010_ホバーで色が変わるボタン/start/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-	  <div id="container">
-		  <button class="btn">
-			  Button
-		  </button>
-	  </div>
+    <div id="container">
+      <button class="btn">Button</button>
+    </div>
   </body>
 </html>
